# code_review_env

./: .dockerignore  .env.example  .env.inference  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  __init__.py  client.py  demo_hosted.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  sync.yml
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py  environment.py  main.py  my_env_environment.py  requirements.txt
tests/: test_environment.py  test_inference.py  test_task_requirements.py
